--- a/style/main.css
+++ b/style/main.css
@@ -1912,7 +1912,6 @@ img {
 
 .nav-links__item {
   width: 100%;
-  height: 100%;
   padding: 0.3em;
   text-align: center;
   background: white;
@@ -1921,6 +1920,7 @@ img {
 
 @media screen and (min-width: 900px) {
   .nav-links__item {
+    height: 100%;
     padding: 0;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2237,7 +2237,6 @@ img {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
-  width: 100%;
   margin: 0 auto;
 }
 
@@ -2253,6 +2252,7 @@ img {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1 / 2;
+    margin: 0;
   }
 }
 
@@ -2285,20 +2285,22 @@ img {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
-  width: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 900px) {
   .footer__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0;
     -ms-grid-column: 3;
     -ms-grid-column-span: 1;
     grid-column: 3 / 4;
